# mxdlib

./: .clang-format  .dockerignore  .gitignore  CMakeLists.txt  CONTRACTS_INIT_BUG_ANALYSIS.md  Dockerfile  FINAL_SECURITY_AUDIT.md  IMPLEMENTATION_COMPLETE.md  NETWORK_SWITCH_GUIDE.md  README.md  SECURITY_IMPLEMENTATION.md  SECURITY_ISSUES_SUMMARY.md  SECURITY_STATUS_FINAL.md  SECURITY_TEST_REPORT.md  TESTS_PASSED.md  TEST_RESULTS_VALIDATOR_MANAGEMENT.md  VALIDATOR_MANAGEMENT_IMPLEMENTATION.md  docker-compose.test.yml  gce-startup-script.sh  install_dependencies.sh  install_dependencies_linux.sh  install_dependencies_macos.sh  install_dependencies_windows.sh  kill_mxd_nodes.sh  letsgo  letsgo.bat  startup-script.sh  switch_network.bat  switch_network.sh  wasm3.pc.in
.github/: PR_BODY_ci_sbom.md
.github/workflows/: ci.yml
config/: default_node.json  node.json
contracts/: BNBToMXDBridge.sol
deployment/: DEPLOYMENT_COMPLETE.md  VALIDATOR_SECURITY_DEPLOYMENT_STATUS.md
docs/: AUDIT_REPORT.md  BRIDGE_TRANSACTIONS.md  BUILD.md  DETERMINISM.md  DHT_IMPLEMENTATION.md  ENHANCED_CONSENSUS_IMPLEMENTATION.md  ENTERPRISE_DEPLOYMENT.md  FIX_BLUEPRINT.md  GKE_DEPLOYMENT.md  HYBRID_CRYPTO.md  HYBRID_CRYPTO_READINESS_REPORT.md  IMPLEMENTATION_MATRIX.md  INTEGRATION.md  MIGRATION_V3.md  MODULES.md  NODE_METRICS_IMPLEMENTATION.md  NTP_IMPLEMENTATION.md  PLATFORM_QUIRKS.md  PRODUCTION_READINESS.md  QUOTA_OPTIMIZATION.md  RECONCILIATION_SUMMARY.md  SECURITY_AUDIT.md  SECURITY_BEST_PRACTICES.md  SECURITY_GUIDELINES.md  SMART_CONTRACTS_ROADMAP.md  VOLUNTARY_TIP_IMPLEMENTATION.md  serialization_spec_v4.md
docs/planning/: IMMEDIATE_ACTION_CHECKLIST.md  MXD_WORK_BLUEPRINT.md  NEXT_STEPS_POST_AUDIT.md  PRODUCTION_READINESS_SUMMARY.md
docs/reports/: PRODUCTION_READINESS_REPORT.md  UTXO_VERIFICATION_IMPLEMENTATION.md
examples/: utxo_verification_demo.c
include/: mxd_address.h  mxd_backup.h  mxd_block_proposer.h  mxd_blockchain.h  mxd_blockchain_db.h  mxd_blockchain_sync.h  mxd_bridge.h  mxd_checkpoints.h  mxd_config.h  mxd_contracts_db.h  mxd_crypto.h  mxd_data_quantization.h  mxd_dht.h  mxd_endian.h  mxd_error.h  mxd_gas_metering.h  mxd_http_api.h  mxd_load_testing.h  mxd_logging.h  mxd_mempool.h  mxd_merkle_trie.h  mxd_metrics.h  mxd_migration.h  mxd_monitoring.h  mxd_ntp.h  mxd_p2p.h  mxd_protocol_version.h  mxd_rocksdb_globals.h  mxd_rsc.h  mxd_secrets.h  mxd_serialize.h  mxd_smart_contracts.h  mxd_transaction.h  mxd_types.h  mxd_utxo.h  mxd_validator_management.h  mxd_wallet_export.h  mxd_wasm_validator.h
include/blockchain/: mxd_dht_internal.h  mxd_metrics_internal.h  mxd_rsc.h  mxd_rsc_internal.h
include/common/: mxd_metrics_types.h
kubernetes/: gke-deployment-small.yaml  gke-deployment-test.yaml  gke-deployment.yaml  gke-monitoring.yaml  mxd-deployment.yaml
monitoring/: mxd_alerts.yml  prometheus.yml
scripts/: README-Windows-PortForward.md  README-Windows.md  backup.sh  clean-gke-small.sh  clean-gke-test.sh  clean-gke.sh  clean-local-windows.cmd  clean-local-windows.ps1  deploy-gke-small.sh  deploy-gke-test.sh  deploy-gke.sh  deploy-local-windows.cmd  deploy-local-windows.ps1  deploy.sh  enterprise_test.sh  load_test.sh  restore.sh  setup_monitoring.sh  stop-gke-small.sh  stop-gke-test.sh  stop-gke.sh  stop-local-windows.cmd  stop-local-windows.ps1  update-local-windows-backup.cmd  update-local-windows.cmd  update-local-windows.ps1  verify_backup.sh  windows-port-forward.bat  windows-port-forward.ps1
src/: base58.c  base58.h  mxd_address.c  mxd_amount.c  mxd_backup.c  mxd_block_proposer.c  mxd_blockchain_db.c  mxd_blockchain_sync.c  mxd_bridge.c  mxd_config.c  mxd_contracts_db.c  mxd_crypto.c  mxd_dht.c  mxd_dht_network.c  mxd_gas_metering.c  mxd_genesis_handler.c  mxd_get_utxo.c  mxd_http_api.c  mxd_load_testing.c  mxd_logging.c  mxd_mempool.c  mxd_merkle_trie.c  mxd_metrics.c  mxd_migration.c  mxd_monitoring.c  mxd_ntp.c  mxd_p2p.c  mxd_p2p_peer.c  mxd_p2p_validation.c  mxd_protocol_version.c  mxd_rocksdb_globals.c  mxd_secrets.c  mxd_smart_contracts.c  mxd_transaction.c  mxd_utxo.c  mxd_validation_handler.c  mxd_wallet_export.c  mxd_wasm_validator.c
src/blockchain/: mxd_blockchain.c  mxd_blockchain_validation.c  mxd_rsc.c  mxd_validator_management.c
src/checkpoints/: mxd_checkpoints.c
src/metrics/: mxd_prometheus.c  mxd_prometheus.h
src/node/: config.json  default_config.json  main.c  memory_utils.h  metrics_display.c  metrics_display.h
src/quantization/: mxd_data_quantization.c
src/utils/: mxd_cert_pinning.c  mxd_cert_pinning.h  mxd_http.c  mxd_http.h  mxd_replay.c  mxd_replay.h
testnet/: SMART_CONTRACTS_ENABLED.md  config_with_contracts.json  enable_contracts.sh  node0_config.json  node1_config.json  node2_config.json  node3_config.json  node4_config.json  node5_config.json  node6_config.json  node7_config.json  node8_config.json  node9_config.json  run_network_tests.sh  start_nodes.sh
testnet/contracts/: DEPLOYMENT_SUCCESS.md  calculator.hex  calculator.wasm  calculator.wat  counter.wat  deploy_simple_math.sh  minimal.hex  (+5 more)
tests/: CMakeLists.txt  basic_node_setup_test.c  blockchain_data_test.c  integration_test.c  mining_validation_test.c  node_network_test.c  stress_test_100tx.c  test.wasm  test.wat  test_address.c  test_blockchain.c  test_bridge.c  test_bridge_transactions.c  test_checkpoints.c  test_config.c  test_contract_state_root.c  test_cross_platform_determinism.c  test_crypto.c  test_data_quantization.c  test_dht.c  test_dilithium5_comprehensive.c  test_enhanced_consensus.c  test_enterprise_features.c  test_gas_metering_enforcement.c  test_main.c  test_mempool.c  test_metrics.c  test_metrics_performance.c  test_mixed_algorithms.c  test_node.c  test_ntp.c  test_p2p.c  test_protocol_migration.c  test_rsc.c  test_security.c  test_smart_contracts.c  test_transaction.c  test_transaction_utxo.c  test_utils.h  test_utxo.c  (+7 more)
tests/fuzz/: fuzz_contract_execution.c  fuzz_gas_metering.c  fuzz_storage.c
tests/sanitizers/: lsan.supp  run_sanitizers.sh  run_valgrind.sh
tests/support/: test_node_daemon.c
tools/: manage_bridge_auth.c  migrate_to_v3.c
(+4 files in other folders)
